# stock-analyse

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  delete.bat  docker-compose.yml  pyproject.toml  启动命令.txt
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: code_generate.py  investment.py  ui.py  wechat.py
app/core/: config.py  db.py  exceptions.py  logger.py  middleware.py  retry.py  task_store.py
app/schemas/: investment.py  response.py
app/services/: code_generator.py  investment.py  wechat_command.py
app/static/: quant_investment_dashboard.html
app/utils/: file_util.py  log_decorators.py  oss_util.py  string_util.py
static/: quant_investment_dashboard.html
tests/: fetch_fear_and_greed_index.py  fetch_fundamentals.py  fetch_sp500_fundamental.py  quant_investment_dashboard.html
wechat-bot/: .gitignore  Dockerfile  package.json  tsconfig.json
wechat-bot/src/: index.ts  login.ts
