[tool.poetry]
name = "llm_gateway"
version = "0.1.0"
description = "A Gateway for LLM"
authors = ["lingotask"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
httpx = {extras = ["http2"], version = "^0.28.1"}
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
sqlmodel = "^0.0.14"
pymysql = "^1.1.0"
loguru = "^0.7.2"
python-dotenv = "^1.2.1"
cryptography = "^46.0.3"
python-multipart = "^0.0.21"
redis = "^7.1.0"
hiredis = "^3.3.0"
aiomysql = "^0.3.2"
sqlalchemy = "^2.0.45"
tenacity = "^9.1.2"
gunicorn = "^23.0.0"
json-repair = "^0.58.5"
aiofiles = "^25.1.0"
tiktoken = "^0.6.0"
jinja2 = "^3.1.3"
pandas = "<3.0.0"
openpyxl = "^3.1.5"
oss2 = "^2.19.1"
watchdog = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.2.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
exclude = [".git", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
strict = true
ignore_missing_imports = true
